fix footer so it isn't constantly visible

--- a/part-3/public/css/application.css
+++ b/part-3/public/css/application.css
@@ -62,8 +62,12 @@ nav a {
 
 footer {
   font-size: 12px;
-  position: fixed;
-  bottom: 0;
+  float: right;
+  height: 20px;
+  margin: 0px 50px 0px 0px;
+  text-align: right;
+  padding: 10px;
+  width: 250px;
 }
 
 .page-header {
